# docgen

./: .gitignore  2018-02-12-visualizing-algorithms.md  Cargo.toml  Ideas.md  LICENSE  README.md  demo.html  layout.html  out.html  out2.html  web.html
.github/workflows/: rust.yml
examples/: 2018-02-12-visualizing-algorithms.html  2018-02-12-visualizing-algorithms.md  demo.html  foo.js  footer.html  for.html  layout.html  out.html  out2.html  web.html
src/: frontmatter.rs  lib.rs  main.rs  render.rs
src/backend/: mod.rs  quickjs.rs  spidermonkey.rs
