[package]
name = "docgen"
version = "0.1.0"
authors = ["Rich Infante <rich@richinfante.com>"]
edition = "2018"

[lib]
name = "docgen"
path = "src/lib.rs"

[[bin]]
name = "docgen_bin"
path = "src/main.rs"

[dependencies]
serde = "1.0.90"
serde_json = "1.0"
serde_yaml = "0.8.8"
cargo_toml = "0.6.4"
html5ever = "0.22.5"
mozjs = "0.10.1"
comrak = "0.5.1"
regex = "1.1.5"
log = "0.4.6"
env_logger = "0.6.1"

glob = "0.3.0"
clap = "2.33.0"
